Fixed spacing between creation post title and body

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -35,3 +35,11 @@ $gray-border: #ccc;
     color: #606060;
   }
 }
+
+.new-post-title {
+  margin-bottom: 10px;
+}
+
+.submit {
+  margin-top: 10px;
+}
